Fix development banner on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -20,7 +20,7 @@ body {
   left: 0;
   right: 0;
   margin: 0;
-  padding: 1.5rem 1rem;
+  padding: 3rem 1rem;
   background: plum;
   font-weight: bold;
 }
